force-app/main/default/objects/Related_Agreement__c/fields/Pushed_to_Net_Gain_On__c.field-meta.xml
<CustomField>
    <fullName>Pushed_to_Net_Gain_On__c</fullName>
    <label>Pushed to Net Gain On</label>
    <type>Date</type>
</CustomField>