force-app/main/default/objects/Related_Agreement__c/fields/R__c.field-meta.xml
<CustomField>
    <fullName>R__c</fullName>
    <label>Reduction Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>