force-app/main/default/objects/Related_Agreement__c/fields/Reduction_Flat_Fee__c.field-meta.xml
<CustomField>
    <fullName>Reduction_Flat_Fee__c</fullName>
    <label>Reduction Flat Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>