force-app/main/default/objects/Related_Agreement__c/fields/Reimbursement_Requested__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Requested__c</fullName>
    <label>Reimbursement Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>