force-app/main/default/objects/Related_Agreement__c/fields/Related_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Agreement_Type__c</fullName>
    <label>Related Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lease_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Access/Utility Easement</fullName>
            </value>
            <value>
                <fullName>Ground Lease Buyout</fullName>
            </value>
            <value>
                <fullName>Anchor Amendment</fullName>
            </value>
            <value>
                <fullName>Colocation Amendment</fullName>
            </value>
            <value>
                <fullName>Ground Amendment</fullName>
            </value>
            <value>
                <fullName>Anchor Payment Reason</fullName>
            </value>
            <value>
                <fullName>Colocation Payment Reason</fullName>
            </value>
            <value>
                <fullName>Ground Payment Reason</fullName>
            </value>
            <value>
                <fullName>SDP Revision/Version</fullName>
            </value>
            <value>
                <fullName>Consent/PAL Letter</fullName>
            </value>
            <value>
                <fullName>ABM Bill Of Sale and Lien Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>