force-app/main/default/objects/Related_Agreement__c/fields/Renewal_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Term_Months__c</fullName>
    <label>Renewal Term/Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>