force-app/main/default/objects/Related_Agreement__c/fields/Rent_Abated__c.field-meta.xml
<CustomField>
    <fullName>Rent_Abated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rent Abated?</label>
    <type>Checkbox</type>
</CustomField>