force-app/main/default/objects/Related_Agreement__c/fields/Rent_Abatement_Deferral_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rent_Abatement_Deferral_Notes__c</fullName>
    <label>Rent Abatement/Deferral Notes</label>
    <type>TextArea</type>
</CustomField>