force-app/main/default/objects/Related_Agreement__c/fields/Rent_Abatement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rent_Abatement_Start_Date__c</fullName>
    <label>Rent Abatement Start Date</label>
    <type>Date</type>
</CustomField>