force-app/main/default/objects/Related_Agreement__c/fields/Rent_Credit__c.field-meta.xml
<CustomField>
    <fullName>Rent_Credit__c</fullName>
    <label>Rent Credit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>