force-app/main/default/objects/Related_Agreement__c/fields/Rent_Defered__c.field-meta.xml
<CustomField>
    <fullName>Rent_Defered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rent Defered ?</label>
    <type>Checkbox</type>
</CustomField>