force-app/main/default/objects/Related_Agreement__c/fields/Rent_Deferred_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rent_Deferred_Start_Date__c</fullName>
    <label>Rent Deferred Start Date</label>
    <type>Date</type>
</CustomField>