force-app/main/default/objects/Related_Agreement__c/fields/Rent_Escalation_Flat_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rent_Escalation_Flat_Fee_Amount__c</fullName>
    <label>Rent Escalation Flat Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>