force-app/main/default/objects/Related_Agreement__c/fields/Rent_Escalation_Flat_Fee_or_Percent__c.field-meta.xml
<CustomField>
    <fullName>Rent_Escalation_Flat_Fee_or_Percent__c</fullName>
    <label>Rent Escalation Flat Fee or Percent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat Fee</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>CPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>