force-app/main/default/objects/Related_Agreement__c/fields/Rent_Escalation_Percent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rent_Escalation_Percent_Amount__c</fullName>
    <label>Rent Escalation Percent Amount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>