force-app/main/default/objects/Related_Agreement__c/fields/Rent_Increase_Decrease_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rent_Increase_Decrease_Amount__c</fullName>
    <label>Rent Increase/Decrease Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>