force-app/main/default/objects/Related_Agreement__c/fields/Rent_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rent_Notes__c</fullName>
    <label>Rent Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>