force-app/main/default/objects/Related_Agreement__c/fields/Requested_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Termination_Date__c</fullName>
    <label>Requested Termination Date</label>
    <type>Date</type>
</CustomField>