force-app/main/default/objects/Related_Agreement__c/fields/Revised_Term_Length__c.field-meta.xml
<CustomField>
    <fullName>Revised_Term_Length__c</fullName>
    <label>Revised Term Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>