force-app/main/default/objects/Related_Agreement__c/fields/Revised_Tower_Rent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Revised_Tower_Rent_Amount__c</fullName>
    <label>Revised Tower Rent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>