force-app/main/default/objects/Related_Agreement__c/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <label>Revision #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>