force-app/main/default/objects/Related_Agreement__c/fields/SDP_Active_Record__c.field-meta.xml
<CustomField>
    <fullName>SDP_Active_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SDP Active Record</label>
    <type>Checkbox</type>
</CustomField>