force-app/main/default/objects/Related_Agreement__c/fields/SDP_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>SDP_Cancellation_Reason__c</fullName>
    <label>SDP Cancellation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>