force-app/main/default/objects/Related_Agreement__c/fields/SDP_Ground_Rent__c.field-meta.xml
<CustomField>
    <fullName>SDP_Ground_Rent__c</fullName>
    <label>SDP Ground Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>