force-app/main/default/objects/Related_Agreement__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>strk__Site__c</referenceTo>
    <relationshipLabel>RelatedAgreementSites</relationshipLabel>
    <relationshipName>RelatedAgreementSites</relationshipName>
    <type>Lookup</type>
</CustomField>