force-app/main/default/objects/Related_Agreement__c/fields/Split_Rent__c.field-meta.xml
<CustomField>
    <fullName>Split_Rent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split Rent</label>
    <type>Checkbox</type>
</CustomField>