force-app/main/default/objects/Related_Agreement__c/fields/Split_Rent_Notes__c.field-meta.xml
<CustomField>
    <fullName>Split_Rent_Notes__c</fullName>
    <label>Split Rent Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>