force-app/main/default/objects/Related_Agreement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Partially Executed</fullName>
            </value>
            <value>
                <fullName>Pending Internal Approval</fullName>
            </value>
            <value>
                <fullName>Internally Approved</fullName>
            </value>
            <value>
                <fullName>Fully Executed</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>