force-app/main/default/objects/Related_Agreement__c/fields/Stop_Rent_Payments__c.field-meta.xml
<CustomField>
    <fullName>Stop_Rent_Payments__c</fullName>
    <label>Stop Rent Payments</label>
    <type>Date</type>
</CustomField>