force-app/main/default/objects/Related_Agreement__c/fields/Submit_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit for Cancellation</label>
    <type>Checkbox</type>
</CustomField>