force-app/main/default/objects/Related_Agreement__c/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <formula>Project__r.Subsidiary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsidiary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>