force-app/main/default/objects/Related_Agreement__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RelatedAgreementTenants10</relationshipLabel>
    <relationshipName>RelatedAgreementTenants10</relationshipName>
    <type>Lookup</type>
</CustomField>