force-app/main/default/objects/Related_Agreement__c/fields/Tenant_Termination_Date_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Termination_Date_Accepted__c</fullName>
    <label>Tenant Termination Date Accepted</label>
    <type>Date</type>
</CustomField>