force-app/main/default/objects/Related_Agreement__c/fields/Termination_Notes__c.field-meta.xml
<CustomField>
    <fullName>Termination_Notes__c</fullName>
    <label>Termination Notes</label>
    <type>TextArea</type>
</CustomField>