force-app/main/default/objects/Related_Agreement__c/fields/Terms_Added__c.field-meta.xml
<CustomField>
    <fullName>Terms_Added__c</fullName>
    <label>Terms Added</label>
    <type>TextArea</type>
</CustomField>