force-app/main/default/objects/Related_Agreement__c/fields/Types_of_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Renewal__c</fullName>
    <label>Types of Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>With Notice</fullName>
            </value>
            <value>
                <fullName>Mutual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>