force-app/main/default/objects/Related_Agreement__c/fields/UE_ID__c.field-meta.xml
<CustomField>
    <fullName>UE_ID__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Project__r.Project_Extension__r.Unit_Economics_Id__c,Project__r.Project_Extension__r.Unit_Economics_Id__r.Name,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UE ID</label>
    <type>Text</type>
</CustomField>