force-app/main/default/objects/Related_Agreement__c/fields/Uplift_Frequency_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Frequency_Multiplier__c</fullName>
    <label>Uplift Frequency Multiplier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>