force-app/main/default/objects/Related_Agreement__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>