force-app/main/default/objects/Related_Agreement__c/validationRules/Locking_for_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Locking_for_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
!IsNew(),
$Profile.Name != &apos;System Administrator&apos;,
ISPICKVAL(Agreement__r.Agreement_Type__c,&apos;SDP&apos;) ,
OR(ISCHANGED( Version__c ), 
   ISCHANGED( Revision__c ), 
   ISCHANGED( Project__c )
)
)</errorConditionFormula>
    <errorMessage>Can&apos;t modify Version, Revision and Project on Related Agreement. Please contact Administrator for more information.</errorMessage>
</ValidationRule>