force-app/main/default/objects/Related_Agreement__c/validationRules/Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Read_Only</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR( ISNEW() , Not( ISNEW() )) ,
NOT($Profile.Name == &apos;System Administrator&apos;))</errorConditionFormula>
    <errorMessage>Can&apos;t modify Related Agreement. Please contact Administrator for more information.</errorMessage>
</ValidationRule>