force-app/main/default/objects/Related_Agreement__c/listViews/Agreements_Due_in_next_90_Days.listView-meta.xml
<ListView>
    <fullName>Agreements_Due_in_next_90_Days</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Lease_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Days_Until_Lease_End__c</columns>
    <columns>Commencement_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Lease_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Days_Until_Lease_End__c</field>
        <operation>lessOrEqual</operation>
        <value>90</value>
    </filters>
    <filters>
        <field>Days_Until_Lease_End__c</field>
        <operation>greaterThan</operation>
        <value>-1</value>
    </filters>
    <label>Agreements Due in next 90 Days</label>
</ListView>