force-app/main/default/objects/Related_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Site__c</columns>
    <columns>NAME</columns>
    <columns>Lease_Description__c</columns>
    <columns>Tenant__c</columns>
    <columns>Commencement_Date__c</columns>
    <columns>Lease_Number__c</columns>
    <columns>Lease_Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>