force-app/main/default/objects/Related_Agreement__c/listViews/All_Agreements.listView-meta.xml
<ListView>
    <fullName>All_Agreements</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Lease_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Commencement_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Lease_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Agreements</label>
</ListView>