force-app/main/default/objects/Related_Agreement__c/listViews/All_Site_Agreements.listView-meta.xml
<ListView>
    <fullName>All_Site_Agreements</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Lease_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Commencement_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Lease_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lease_Type__c</field>
        <operation>equals</operation>
        <value>Site</value>
    </filters>
    <label>All Site Agreements</label>
</ListView>